--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<h1>{{ title }}</h1>
-<app-heroes></app-heroes>
+<mat-toolbar color="primary">
+    <span><h1>{{ title }}</h1></span>
+</mat-toolbar>
+
+<div class="content">
+   <app-heroes></app-heroes>
+</div>
