--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -1,8 +1,8 @@
-<h2>{{ hero.name | uppercase }} - Detalhes</h2>
-<div><span>id: </span>{{ hero.id }}</div>
-<div><span>Nome: </span>{{ hero.name }}</div>
+<h2>Avengers</h2>
+<ul>
+   <li *ngFor="let hero of listHeroes" [class.selected]="hero === selectedHero" (click)="onSelect(hero)">
+      <span>{{ hero.id }}</span> {{ hero.name }}
+   </li>
+</ul>
 
-<div>
-   <label for="name">Nome do Herói: </label>
-   <input id="name" [(ngModel)]="hero.name" placeholder="name" type="text">
-</div>
+<app-hero-details [hero]="selectedHero"></app-hero-details>
