--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,25 @@
 <mat-toolbar color="primary">
     <span><h1>{{ title }}</h1></span>
+    <span fxFlex></span>
+
+  <button 
+    mat-icon-button 
+    aria-label="Heroes List" 
+    matTooltip="Dashboard"
+    routerLink="/dashboard" >
+    <mat-icon>dashboard</mat-icon>
+  </button>
+  <button 
+    mat-icon-button 
+    aria-label="Heroes List" 
+    matTooltip="Heroes"
+    routerLink="/heroes" >
+    <mat-icon>sports_martial_arts</mat-icon>
+  </button>
+
 </mat-toolbar>
 
-<div class="content">
-   <app-heroes></app-heroes>
+<div class="content" fxLayoutGap="12px" >
+   <router-outlet></router-outlet>
+    <app-messages></app-messages>
 </div>
