--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -1,8 +1,20 @@
-<h2>Avengers</h2>
-<ul>
-   <li *ngFor="let hero of listHeroes" [class.selected]="hero === selectedHero" (click)="onSelect(hero)">
-      <span>{{ hero.id }}</span> {{ hero.name }}
-   </li>
-</ul>
+<h1>Avengers</h1>
 
-<app-hero-details [hero]="selectedHero"></app-hero-details>
+<mat-table [dataSource]="listHeroes" class="mat-elevation-z8">
+   <!-- ID -->
+   <ng-container matColumnDef="id">
+     <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
+     <mat-cell *matCellDef="let row"> {{ row.id }} </mat-cell>
+   </ng-container>
+ 
+   <!-- name -->
+   <ng-container matColumnDef="name">
+     <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+     <mat-cell *matCellDef="let row"> {{row.name}} </mat-cell>
+   </ng-container>
+ 
+   <!-- Header and Row Declarations -->
+   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+   <mat-row class="link" *matRowDef="let row; columns: displayedColumns" 
+   routerLink="/heroes/{{row.id}}"></mat-row>
+ </mat-table>
