--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,7 @@
 </mat-toolbar>
 
 <div class="content" fxLayoutGap="12px" >
-   <router-outlet></router-outlet>
-    <app-messages></app-messages>
+  <app-loading></app-loading>
+  <router-outlet></router-outlet>
+  <app-messages></app-messages>
 </div>
